--- a/eShop.Bootstrapper/Properties/launchSettings.json
+++ b/eShop.Bootstrapper/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "eCommerceApp": {
+    "eShop.Bootstrapper": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
