--- a/eShop.Bootstrapper/eShop.Bootstrapper.csproj
+++ b/eShop.Bootstrapper/eShop.Bootstrapper.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\eShop.Web.CustomerPortal\eShop.Web.CustomerPortal.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Controls\TemplatedComponent.razor">
+      <CustomToolNamespace></CustomToolNamespace>
+    </Content>
+    <Content Update="Controls\VisibilityComponent.razor">
+      <CustomToolNamespace></CustomToolNamespace>
+    </Content>
+  </ItemGroup>
+
 </Project>
