add to cart functionality done, tho null ref error

--- a/eShop.Bootstrapper/eShop.Bootstrapper.csproj
+++ b/eShop.Bootstrapper/eShop.Bootstrapper.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\eShop.StateStore.LocalStorage\eShop.StateStore.LocalStorage.csproj" />
     <ProjectReference Include="..\eShop.Data.InMemory\eShop.Data.InMemory.csproj" />
     <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
     <ProjectReference Include="..\eShop.Web.AdminPortal\eShop.Web.AdminPortal.csproj" />
     <ProjectReference Include="..\eShop.Web.CustomerPortal\eShop.Web.CustomerPortal.csproj" />
+    <ProjectReference Include="..\eShop.ShoppingCart.LocalStorage\eShop.ShoppingCart.LocalStorage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
