--- a/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
+++ b/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.15" />
   </ItemGroup>
 
