--- a/eShop.Bootstrapper/eShop.Bootstrapper.csproj
+++ b/eShop.Bootstrapper/eShop.Bootstrapper.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\eShop.StateStore.LocalStorage\eShop.StateStore.LocalStorage.csproj" />
     <ProjectReference Include="..\eShop.Data.InMemory\eShop.Data.InMemory.csproj" />
+    <ProjectReference Include="..\eShop.StateStore.LocalStorage\eShop.StateStore.LocalStorage.csproj" />
     <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
     <ProjectReference Include="..\eShop.Web.AdminPortal\eShop.Web.AdminPortal.csproj" />
     <ProjectReference Include="..\eShop.Web.CustomerPortal\eShop.Web.CustomerPortal.csproj" />
